--- a/example/starter_projects/switchy/web/views/templates/ticker.xml
+++ b/example/starter_projects/switchy/web/views/templates/ticker.xml
@@ -1,28 +1,48 @@
-<border
-	width='300'
-	halign='center'
-	valign='center' 
- 	bordercolor='{resource theme_border_color_dark}' 
- 	background='SteelBlue'
- 	borderthickness='{resource theme_border_thickness}'
- 	padding='{resource theme_border_padding}'
- 	margin='10'>
-  <stack halign='stretch'>
-	   <stack halign='center' orientation='horizontal'>
-		   <textbox valign='center' placeholder='Enter a ticker symbol...' text='{data tickerInput, mode=TwoWay}' />
-		   <button on.click='watch_ticker_click' content='Submit' margin='5' />		   
-	   </stack>
-	   <border halign='stretch' margin='5' maxheight='600' minheight='50' verticalscrollenabled='true' background='Black'>
-	   		<collectionpresenter collection='{data tickerOutput}'>
-	   		  <itemstemplate>
-	   		  	<stack orientation='horizontal'>
-	   		  		<textblock margin='5' foreground='White' text='{data datetime}' /> 
-   		  					<textblock margin='5' foreground='White' text='{data symbol}' /> 
-	   		  		<textblock margin='5' foreground='White' text='{data quote}' /> 
-	   		  	</stack>
-	   		  </itemstemplate>
-	   		</collectionpresenter>
-	   </border>
-  </stack>
-  
-</border>
+<stack halign='center' valign='center'>
+	<textblock halign='center' maxwidth='400'>
+	This simple stock ticker demo will, at random intervals, display updates from fictional 
+	stock symbols that you enter, simulating coming data from some external
+	source.
+	</textblock>
+	<stack orientation='horizontal' halign='center'>
+		<border
+		 	bordercolor='{resource theme_border_color_dark}' 
+		 	background='SteelBlue'
+		 	borderthickness='{resource theme_border_thickness}'
+		 	padding='{resource theme_border_padding}'
+		 	margin='2'>
+		  <stack halign='stretch'>
+			   <stack halign='center' orientation='horizontal'>
+				   <textbox valign='center' placeholder='Enter a stock symbol...' text='{data tickerInput, mode=TwoWay}' />
+				   <button on.click='watch_ticker_click' content='Submit' margin='5' />		   
+			   </stack>
+			   <border halign='stretch' margin='5' height='380' background='Black'>
+			   		<collectionpresenter collection='{data tickerOutput}'>
+			   		  <itemstemplate>
+			   		  	<stack orientation='horizontal'>
+			   		  		<textblock margin='5' minwidth='60' foreground='White' text='{data datetime}' /> 
+		   		  			<textblock margin='5' minwidth='60' foreground='White' text='{data symbol}' /> 
+			   		  		<textblock margin='5' foreground='{data directionColor}' text='{data quote}' /> 
+			   		  	</stack>
+			   		  </itemstemplate>
+			   		</collectionpresenter>
+			   </border>
+		  </stack>
+		</border>
+		<border
+		 	bordercolor='{resource theme_border_color_dark}' 
+		 	background='WhiteSmoke'
+		 	valign='stretch'
+		 	borderthickness='{resource theme_border_thickness}'
+		 	padding='{resource theme_border_padding}'
+		 	margin='2'>
+		   <stack>
+		     <textblock text='Watch List' />
+		     <border borderthickness='1' halign='stretch' bordercolor='Black' />
+		     <collectionpresenter collection='{data watchList}'>
+		     </collectionpresenter>
+		   </stack>
+		</border>
+		
+	</stack>
+</stack>
